[MJLINK-40] add --include-locales option.